fixed image positioning on mobile res

--- a/src/app.css
+++ b/src/app.css
@@ -7,12 +7,6 @@ main {
 	flex: 1;
 }
 
-@media (max-width: 1024px) {
-	main {
-		padding: 0 0.7em;
-	}
-}
-
 h1,
 h2,
 h3 {
@@ -33,18 +27,6 @@ h2 {
 	line-height: 1.2;
 	letter-spacing: -0.1em;
 }
-
-/* h1 {
-	font-size: 8.5rem;
-	line-height: 1;
-	letter-spacing: -0.15em;
-}
-
-h2 {
-	font-size: 3.2rem;
-	line-height: 1.2;
-	letter-spacing: -0.1em;
-} */
 
 h3 {
 	font-style: italic;
@@ -68,4 +50,10 @@ li {
 	word-break: keep-all;
 	white-space: normal;
 	hyphens: manual;
+}
+
+@media (max-width: 1024px) {
+	main {
+		padding: 0 0.7em;
+	}
 }
